--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "google-map-react": "^2.1.9",
         "node-sass": "^5.0.0",
         "prop-types": "^15.7.2",
+        "query-string": "^7.0.1",
         "react": "^17.0.2",
         "react-cool-onclickoutside": "^1.6.1",
         "react-dom": "^17.0.2",
