added possibility to submit reviews, fixed stars style and added recommendation section in accountBooking

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "description": "frontside side of explotour",
     "private": true,
     "dependencies": {
+        "@material-ui/core": "^4.11.4",
+        "@material-ui/icons": "^4.11.2",
+        "@material-ui/lab": "^4.0.0-alpha.58",
         "@pmndrs/branding": "0.0.7",
         "@reach/combobox": "^0.15.0",
         "@react-google-maps/api": "^2.1.1",
