--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
         "react-dom": "^17.0.2",
         "react-google-maps": "^9.4.5",
         "react-places-autocomplete": "^7.3.0",
+        "react-responsive": "^8.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "stripe": "^8.150.0",
-        "styled-components": "^5.2.3",
+        "styled-components": "^5.3.0",
         "three": "^0.127.0",
         "topojson": "^3.0.2",
         "use-places-autocomplete": "^1.9.1",
