--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "react-cool-onclickoutside": "^1.6.1",
         "react-dom": "^17.0.2",
         "react-google-maps": "^9.4.5",
+        "react-icons": "^4.2.0",
         "react-places-autocomplete": "^7.3.0",
         "react-responsive": "^8.2.0",
         "react-router-dom": "^5.2.0",
