--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react-responsive": "^8.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
+        "react-tilt": "^0.1.4",
         "stripe": "^8.150.0",
         "styled-components": "^5.3.0",
         "three": "^0.127.0",
