--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-react": "^7.23.1",
         "google-map-react": "^2.1.9",
-        "node-sass": "^5.0.0",
         "prop-types": "^15.7.2",
         "query-string": "^7.0.1",
         "react": "^17.0.2",
@@ -39,6 +38,8 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "react-tilt": "^0.1.4",
+        "sass": "^1.41.0",
+        "sass-loader": "^12.1.0",
         "stripe": "^8.150.0",
         "styled-components": "^5.3.0",
         "three": "^0.127.0",
